# meter_reader

./: .gitignore  .woodpecker.yml  README.md  meter_reader.kicad_pcb  meter_reader.kicad_pro  meter_reader.kicad_sch
.ci/: tag.sh
firmware/: Cargo.toml  README.md  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/host/: README.md  pyproject.toml
firmware/host/src/meter_reader_host/: __init__.py  bus.py  cli.py  device.py  discovery.py  protocol.py  tui.py
firmware/src/: cancontroller.rs  configutils.rs  flashctl.rs  main.rs  mlx.rs  pulse_counter.rs
firmware/src/flashdriver/: common.rs  flashctl.rs  mod.rs
