[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Alex Roth <alex@alexroth.me>"]
name = "mspm0_blinky"
edition = "2024"
version = "0.1.0"

#To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
#If you use a standard main.rs file the following is sufficient:
#[[bin]]
#name = "main"
#test = false

# needed for each integration test
#[[test]]
#name = "integration"
#harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0.1"
defmt-rtt = { version = "1.0.0", features = [] } #// "disable-blocking-mode"
panic-probe = { version = "1.0", features = ["print-defmt"]}
semihosting = "0.1.20"

# note - feature is misspelled in upstream?
embassy-mspm0 = { path = "/home/alex/embassy/embassy-mspm0",  features = ["mspm0g3106dgs28", "rt", "time-driver-timg8", "unstable-pac", "defmt"]}
embassy-time = { path = "/home/alex/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-executor = { path = "/home/alex/embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-sync = { path = "/home/alex/embassy/embassy-sync"}
embedded-hal = "1.0.0"
embedded-hal-nb = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
derive-mmio = { version = "0.6.1", features = ["defmt"]}
bitbybit = "1.4.0"
arbitrary-int = { version = "2.0.0", features = ["defmt"] }
embedded-can = "0.4.1"
embedded-storage-async = "0.4.1"
sequential-storage = { version = "7.1.0", features = ["defmt"] }

#[patch.'https://github.com/mspm0-rs/mspm0-data-generated/']
#mspm0-metapac = { path = "/home/alex/mspm0-data/build/mspm0-metapac/" }

[dev-dependencies]
defmt-test = "0.3"


[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/examples/mspm0c1104", env = { DEFMT_RTT_BUFFER_SIZE = "72" }}
]

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
lto = 'fat'

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
